dosc: Swagger для авторизации
- Создание файла с эндпоинтами авторизации;
- Создание ресурса пользователя и ответа от эндпоинта с получением токена;
- Создание Login request;
- Из-за ошибки в названии переименован каталог с ответами.
